# founder-autopilot

./: .gitignore  ARCHITECTURE.md  DEPRECATED.md  EXAMPLES.md  LICENSE  QUICKSTART.md  README.md  UPGRADES.md
backend/: .env.example  pyproject.toml  setup.py
backend/app/: main.py  settings.py
backend/app/agents/: business_builder.py  marketing.py  orchestrator.py  paperwork_agent.py  reviewer.py  stripe_agent.py  webdev.py
backend/app/core/: business_spec.py  permissions.py  task_graph.py  vault.py
backend/app/prompts/: business_prompts.json
backend/app/tools/: email_tool.py  filesystem_tool.py  gcloud_tool.py  git_tool.py  marketing_ops_tool.py  playwright_tool.py  shell_tool.py  social_tool.py  stripe_tool.py  website_launcher.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  TerminalCard.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: BusinessSpec.tsx  Connectors.tsx  LaunchRun.tsx  Logs.tsx  Permissions.tsx  PromptLibrary.tsx
