[project]
name = "founder-autopilot"
version = "0.1.0"
description = "AI-powered business builder orchestrator with agent-based architecture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.10.0",
    "stripe>=7.0.0",
    "playwright>=1.40.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "cryptography>=41.0.7",
    "google-cloud-compute>=1.15.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-api-python-client>=2.100.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.1",
    "ruff>=0.1.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
